--- a/project/config/packages/security.yaml
+++ b/project/config/packages/security.yaml
@@ -1,8 +1,22 @@
 security:
+    encoders:
+        App\Security\UserIdentity: native
+    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    providers:
+        app_user_provider:
+            id: App\Security\UserProvider
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        main:
+            pattern: ^/api
+            http_basic:
+                provider: app_user_provider
+            stateless: true
+            guard:
+                authenticators:
+                    - App\Security\BasicAuthenticator
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
