--- a/project/config/packages/doctrine.yaml
+++ b/project/config/packages/doctrine.yaml
@@ -8,8 +8,28 @@ doctrine:
             charset: utf8
             collate: -
 
+        types:
+            user_user_id: 'App\Infrastructure\Doctrine\Type\User\IdType'
+            user_user_email: 'App\Infrastructure\Doctrine\Type\User\EmailType'
+            task_task_id: 'App\Infrastructure\Doctrine\Type\Task\IdType'
+            task_task_author_id: 'App\Infrastructure\Doctrine\Type\Task\AuthorType'
+            task_task_priority: 'App\Infrastructure\Doctrine\Type\Task\PriorityType'
+            task_task_status: 'App\Infrastructure\Doctrine\Type\Task\StatusType'
+
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
         mappings:
+            User:
+                is_bundle: false
+                type: attribute
+                dir: '%kernel.project_dir%/src/Model/User/Entity'
+                prefix: 'App\Model\User\Entity'
+                alias: User
+            Task:
+                is_bundle: false
+                type: attribute
+                dir: '%kernel.project_dir%/src/Model/Task/Entity'
+                prefix: 'App\Model\Task\Entity'
+                alias: Task
